--- a/server/package.json
+++ b/server/package.json
@@ -7,14 +7,22 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server",
     "dev": "nodemon server",
+    "lint": "eslint . --fix"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "@stdlib/string-base-uppercase": "0.0.2",
+    "absolutify": "^0.1.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "puppeteer": "^19.3.0",
+    "replace-in-html": "^1.0.3",
+    "serialize": "^0.1.3"
   },
   "devDependencies": {
+    "eslint": "^8.28.0",
     "nodemon": "^2.0.20"
   }
 }
